[package]
name = "greatreads"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
redis = { version = "0.24", features = ["tokio-comp"] }
scraper = "0.18"
serde_json = "1.0"
